# briefcase

./: .gitignore  README.md  pyproject.toml  spec.md
briefcase/: cli.py  config.py  gitops.py  layouts.py  registry.py  scaffold.py  templates.py
tests/: test_config.py  test_gitops.py  test_layouts.py  test_registry.py  test_scaffold.py
